--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="row">
                         <ul class="navbar-nav ml-auto col-lg-6">
                             <li class="nav-item">
-                                <a class="nav-link scroll-link" href="finalportfolio.html"><i class="fa-solid fa-house"></i> Home</a>
+                                <a class="nav-link scroll-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link scroll-link" href="My Works.html"><i class="fa-solid fa-briefcase"></i> My Works</a>
