--- a/My Works.html
+++ b/My Works.html
@@ -20,7 +20,7 @@
             <!-- Top menu -->
             <nav class="navbar navbar-dark fixed-top">
                 <div class="container">
-                    <h1 class="navLogo"><a class="nav-brand" href="finalportfolio.html">TLP</a></h1>
+                    <h1 class="navLogo"><a class="nav-brand" href="index.html">TLP</a></h1>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span></span>
                             <span></span>
@@ -31,7 +31,7 @@
                         <div class="row">
                             <ul class="navbar-nav ml-auto col-lg-6">
                             <li class="nav-item">
-                                <a class="nav-link scroll-link" href="finalportfolio.html"><i class="fa-solid fa-house"></i> Home</a>
+                                <a class="nav-link scroll-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link scroll-link" href="My Works.html"><i class="fa-solid fa-briefcase"></i> My Works</a>
