--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- Top menu -->
             <nav class="navbar navbar-dark fixed-top">
                 <div class="container">
-                    <h1 class="navLogo"><a class="nav-brand" href="finalportfolio.html">TLP</a></h1>
+                    <h1 class="navLogo"><a class="nav-brand" href="index.html">TLP</a></h1>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span></span>
                         <span></span>
